# android_game

./: README.md  build.gradle  giturl  settings.gradle
bricks_game/: build.gradle
bricks_game/src/: AndroidManifest.xml
bricks_game/src/cpp/: CMakeLists.txt  engine.h  logger.h
bricks_game/src/cpp/androidfopen/: android_fopen.c  android_fopen.h
bricks_game/src/cpp/jni/: jniapi.cpp  jniapi.h
bricks_game/src/cpp/renderer/: renderer.cpp  renderer.h
bricks_game/src/cpp/stb_image/: stb_image.h
bricks_game/src/java/com/godfrey/jni/: GameCore.java
bricks_game/src/res/layout/: activity_main.xml
